<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Password</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="registrasi_textView">USER REGISTRATION</string>
    <string name="registrasi_button">Save &amp; Login</string>
    <string name="login_textView" />
    <string name="login_button">Login</string>
    <string name="title_activity_password_list">PasswordListActivity</string>
    <string name="no_record">No Record Password Yet</string>
    <string name="menu_add_new">NEW</string>
    <string name="title_activity_password_edit">PasswordEditActivity</string>
    <string name="edit_title">Title</string>
    <string name="edit_email">Email</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="edit_web">http://</string>
    <string name="edit_others">Notes</string>
    <string name="menu_delete">Delete</string>
	 <string name="menu_save">Save</string>
	 <string name="menu_cancel">Cancel</string>
    <string name="no_notes">No Password Yet</string>
    <string name="menu_insert">Add Note</string>
    
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>

    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="save_account">Save Password</string>
    <string name="title_activity_data_list">DataListActivity</string>
    <string name="login">Login</string>
    <string name="no_data">Data is Empty</string>
    <string name="title_activity_data_edit">DataEditActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
</resources>
