<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordEditActivity" 
    android:background="#fcf9a8"
    >

    <EditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:singleLine="true"
        android:inputType="text" 
        android:hint="@string/edit_title"
        android:textStyle="bold"
        >
		
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_editText"
        android:layout_alignRight="@+id/email_editText"
        android:layout_below="@+id/email_editText"
        android:ems="10" 
        android:hint="@string/edit_username"
        android:inputType="text"
        
        />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_editText"
        android:layout_alignRight="@+id/title_editText"
        android:layout_below="@+id/title_editText"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_editText"
        android:layout_alignRight="@+id/username_editText"
        android:layout_below="@+id/username_editText"
      
        android:hint="@string/edit_password"
        android:inputType="textVisiblePassword"
        
         />

    <EditText
        android:id="@+id/web_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_editText"
        android:layout_alignRight="@+id/password_editText"
        android:layout_below="@+id/password_editText"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_web"
         />

    <EditText
        android:id="@+id/notes_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/web_editText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/web_editText"
        android:layout_below="@+id/web_editText"
        android:ems="10"
        android:hint="@string/edit_others"
        
         />

</RelativeLayout>
