<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.treblig.mypassword.ChangePasswordActivity">

    <TextView
        android:id="@+id/text_view_notif_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:paddingBottom="10dp"
        android:textColor="@color/error_color"
        android:layout_above="@+id/edit_text_old_password"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/edit_text_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldpassword"
        android:paddingBottom="16dp"
        android:inputType="textPassword"
        android:layout_above="@+id/edit_text_new_password"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/edit_text_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpassword"
        android:paddingBottom="16dp"
        android:inputType="textPassword"
        android:layout_above="@+id/edit_text_conf_new_password"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/edit_text_conf_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:paddingBottom="16dp"
        android:inputType="textPassword"
        android:layout_above="@+id/button_save_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/save_account"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
